--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,14 @@
         "project": ["./tsconfig.json"]
     },
     "rules": {
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/naming-convention": "off",
+        "@typescript-eslint/no-misused-promises": [
+            "error",
+            {
+            "checksVoidReturn": false
+            }
+        ]
+          
     }
 }
