--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "test": "jest --passWithNoTests",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
-    "migrate:make": "yarn knex migrate:make --knexfile src/providers/database/knex/knexfile.ts", 
-    "migrate": "yarn knex migrate:up --knexfile src/providers/database/knex/knexfile.ts", 
-    "migrate:all": "yarn knex migrate:latest --knexfile src/providers/database/knex/knexfile.ts", 
-    "migrate:rollback": "yarn knex migrate:rollback --knexfile src/providers/database/knex/knexfile.ts", 
-    "migrate:list": "yarn knex migrate:list --knexfile src/providers/database/knex/knexfile.ts", 
+    "migrate:make": "yarn knex migrate:make --knexfile src/providers/database/knex/knexfile.ts",
+    "migrate": "yarn knex migrate:up --knexfile src/providers/database/knex/knexfile.ts",
+    "migrate:all": "yarn knex migrate:latest --knexfile src/providers/database/knex/knexfile.ts",
+    "migrate:rollback": "yarn knex migrate:rollback --knexfile src/providers/database/knex/knexfile.ts",
+    "migrate:list": "yarn knex migrate:list --knexfile src/providers/database/knex/knexfile.ts",
     "commit": "npm run lint && git-cz"
   },
   "keywords": [],
@@ -26,14 +26,23 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "knex": "^2.4.2",
+    "morgan": "^1.10.0",
     "pg": "^8.10.0",
+    "validator": "^13.11.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.2",
+    "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "eslint": "^8.39.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
